Add dark mode setting, started working on bug where you cannot select more than 1 file. Changed the download hanlder to be async.

--- a/AutoMD5/MainWindow.xaml
+++ b/AutoMD5/MainWindow.xaml
@@ -7,22 +7,21 @@
         mc:Ignorable="d"
         Title="AutoMD5 - Dashboard" Height="768" Width="994" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label Content="AutoMD5" HorizontalAlignment="Left" Height="42" Margin="63,10,0,0" VerticalAlignment="Top" Width="108" FontSize="24" FontFamily="Yu Gothic UI Light" FontWeight="Bold"/>
+        <Label x:Name="appname" Content="AutoMD5" HorizontalAlignment="Left" Height="42" Margin="63,10,0,0" VerticalAlignment="Top" Width="108" FontSize="24" FontFamily="Yu Gothic UI Light" FontWeight="Bold"/>
         <Button Content="New File" HorizontalAlignment="Left" Height="28" Margin="851,680,0,0" VerticalAlignment="Top" Width="109" Click="Button_Click"/>
         <Button x:Name="checkupdates" Content="Recheck All" HorizontalAlignment="Left" Height="28" Margin="851,648,0,0" VerticalAlignment="Top" Width="109" Click="checkupdates_Click"/>
         <ListView x:Name="filelist" HorizontalAlignment="Left" Height="658" Margin="10,61,0,0" VerticalAlignment="Top" Width="219" SelectionChanged="filelist_SelectionChanged">
-            <ListView.View>
-                <GridView>
-                </GridView>
-            </ListView.View>
         </ListView>
         <Button x:Name="aboutbutton" Content="App Credits" HorizontalAlignment="Left" Height="28" Margin="851,614,0,0" VerticalAlignment="Top" Width="109" Click="aboutbutton_Click"/>
         <Label x:Name="title" Content="Select a file.." HorizontalAlignment="Left" Height="43" Margin="242,61,0,0" VerticalAlignment="Top" Width="718" FontSize="24" FontFamily="Yu Gothic UI Light"/>
-        <TextBox x:Name="instructortext" HorizontalAlignment="Left" Height="246" Margin="242,109,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="718" IsEnabled="False"/>
+        <TextBox x:Name="instructortext" IsReadOnly="True" HorizontalAlignment="Left" Height="246" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto"
+         ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="242,109,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="718"/>
         <Label x:Name="file_md5value" Content="" HorizontalAlignment="Left" Height="170" Margin="242,360,0,0" VerticalAlignment="Top" Width="718" FontSize="24" FontFamily="Yu Gothic UI Light"/>
         <Label x:Name="statustext" Content="" HorizontalAlignment="Left" Height="71" Margin="242,538,0,0" VerticalAlignment="Top" Width="718" FontSize="24" FontFamily="Yu Gothic UI Light"/>
         <Button x:Name="removeselectedbutton" Content="Remove Selected" HorizontalAlignment="Left" Height="28" Margin="731,680,0,0" VerticalAlignment="Top" Width="115" Background="Red" BorderBrush="{x:Null}" Foreground="White" Click="Button_Click_2" IsEnabled="False"/>
         <Button x:Name="checkselectedbutton" Content="Check Selected" HorizontalAlignment="Left" Height="28" Margin="731,648,0,0" VerticalAlignment="Top" Width="115" Background="#FF00953D" BorderBrush="{x:Null}" Foreground="White" Click="Button_Click_1" IsEnabled="False"/>
+        <Button x:Name="darkmode_button" Content="🌙" HorizontalAlignment="Left" Height="30" Margin="927,10,0,0" VerticalAlignment="Top" Width="34" Click="darkmode_button_Click"/>
+        <Button x:Name="lightmode_emoji" Content="☀️" HorizontalAlignment="Left" Height="30" Margin="888,10,0,0" VerticalAlignment="Top" Width="34" Click="lightmode_emoji_Click"/>
 
     </Grid>
 </Window>
