--- a/AutoMD5/MainWindow.xaml
+++ b/AutoMD5/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label x:Name="appname" Content="AutoMD5" HorizontalAlignment="Left" Height="42" Margin="63,10,0,0" VerticalAlignment="Top" Width="108" FontSize="24" FontFamily="Yu Gothic UI Light" FontWeight="Bold"/>
         <Button Content="New File" HorizontalAlignment="Left" Height="28" Margin="851,680,0,0" VerticalAlignment="Top" Width="109" Click="Button_Click"/>
-        <Button x:Name="checkupdates" Content="Recheck All" HorizontalAlignment="Left" Height="28" Margin="851,648,0,0" VerticalAlignment="Top" Width="109" Click="checkupdates_Click"/>
+        <Button x:Name="checkupdates" Content="Check All" HorizontalAlignment="Left" Height="28" Margin="851,648,0,0" VerticalAlignment="Top" Width="109" Click="checkupdates_Click"/>
         <ListView x:Name="filelist" HorizontalAlignment="Left" Height="658" Margin="10,61,0,0" VerticalAlignment="Top" Width="219" SelectionChanged="filelist_SelectionChanged">
         </ListView>
         <Button x:Name="aboutbutton" Content="App Credits" HorizontalAlignment="Left" Height="28" Margin="851,614,0,0" VerticalAlignment="Top" Width="109" Click="aboutbutton_Click"/>
